GSocket: Reset the timeout in the GSocket GSource after it was triggered

https://bugzilla.gnome.org/show_bug.cgi?id=667989